logs/bvcs.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/bvcs'...
Listing './lib/python3.5/site-packages/bvcs/methods'...
Compiling './lib/python3.5/site-packages/bvcs/methods/attip.py'...
***   File "./lib/python3.5/site-packages/bvcs/methods/attip.py", line 55
    print "{1} [{0}] is not at tip".format(vcstype, name)
                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/bvcs/methods/checkout.py'...
***   File "./lib/python3.5/site-packages/bvcs/methods/checkout.py", line 46
    print 'Checked out {0} repositories'.format(len(paths))
                                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/bvcs/methods/clone.py'...
***   File "./lib/python3.5/site-packages/bvcs/methods/clone.py", line 36
    print "Path {0} exists (skipped).".format(p)
                                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/bvcs/methods/commit.py'...
***   File "./lib/python3.5/site-packages/bvcs/methods/commit.py", line 76
    print 'Performed commit on {0} repositories'.format(len(paths))
                                               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/bvcs/methods/identify.py'...
***   File "./lib/python3.5/site-packages/bvcs/methods/identify.py", line 45
    print "{0} ({1}): {2}".format(name, vcstype, rev)
                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/bvcs/methods/init.py'...
***   File "./lib/python3.5/site-packages/bvcs/methods/init.py", line 51
    print 'Initialized {0} repositories'.format(len(paths))
                                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/bvcs/methods/isclean.py'...
***   File "./lib/python3.5/site-packages/bvcs/methods/isclean.py", line 48
    print "{0} ({1}): {2}".format(name, vcstype, msg)
                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/bvcs/methods/outgoing.py'...
***   File "./lib/python3.5/site-packages/bvcs/methods/outgoing.py", line 83
    print "{1} [{0}] needs push!".format(vcstype, name)
                                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/bvcs/methods/pull.py'...
***   File "./lib/python3.5/site-packages/bvcs/methods/pull.py", line 37
    print '{0} ({1})'.format(path, vcstype)
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/bvcs-0.0.1.dev0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
